worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker-dp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: dockersamples/examplevotingapp_worker
          resources:
            requests:
              cpu: 300m
              memory: 300Mi
            limits:
              cpu: 600m
              memory: 600Mi
