db.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-service
spec:
  selector:
    db: postgres
  type: ClusterIP
  ports:
    - name: db-port
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stateful
  labels:
    db: postgres
spec:
  selector:
    matchLabels:
      db: postgres
  serviceName: db-service
  replicas: 2
  template:
    metadata:
      labels:
        db: postgres
    spec:
      terminationGracePeriodSeconds: 15
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: db-persist
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              name: db
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "2"
              memory: 6Gi
            limits:
              cpu: "2"
              memory: 6Gi
