ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rp
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: mainsrv3.ddns.net
      http:
        paths:
          - path: /vote(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vote-server
                port:
                  number: 80
          - path: /result(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: result-server
                port:
                  number: 80
